--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
       <h1 style="text-size:45px"class="mdl-card__title-text">JOIN A COMMUNITY OF PEOPLE THAT UNDERSTAND YOU</h1>
     </div>
     <div class="mdl-card__supporting-text">
-    <h4><strong>The Activist </strong> the first platform for activists defend your cause
-    and gather a community of people that share your beliefs</h4>
+    <strong>The Activist </strong> the first platform for activists defend your cause
+    and gather a community of people that share your beliefs
     </div>
     <div class="mdl-card__actions mdl-card--border">
       <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
